# python-project-template

./: .envrc  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt  setup.sh
.github/workflows/: lint-test.yml  publish-testpypi.yml  python-publish-testpypi.yml
src/template_pkg/: hello.py
tests/: test_hello.py
