[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hello-pkg"
version = "0.1.0"
description = "A minimal Hello World Python package"
authors = [{ name="Linem Davton", email="linemdavton@gmail.com" }]
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

